# ja-shortener

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  artifacthub-repo.yml  docker-compose.yml  entrypoint-web.sh  index.yaml  ja-shortener-0.1.0.tgz  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  publish-helm-chart.yml
charts/ja-shortener/: Chart.yaml
charts/ja-shortener/templates/: deployment.yaml
deployment/: gunicorn.conf.py
helm/charts/ja-shortener/: Chart.yaml  README.md  values.yaml
helm/charts/ja-shortener/templates/: _helpers.tpl  backup-cronjob.yaml  backup-pvc.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  traefik.yaml
helm/ja-shortener/templates/: _helpers.tpl  hpa.yaml
ja_shortener/: manage.py
ja_shortener/ja_admin/: __init__.py  apps.py  unfold_callbacks.py
ja_shortener/ja_admin/templates/admin/: index.html
ja_shortener/ja_settings/: asgi.py  settings.py  urls.py  wsgi.py
ja_shortener/shortener/: admin.py  algorithm.py  apps.py  models.py  urls.py  views.py
ja_shortener/shortener/management/commands/: createsuperuser.py  ja_createsuperuser.py
ja_shortener/shortener/migrations/: 0001_initial.py
ja_shortener/shortener/static/shortener/: logo.afdesign
